<resources>
    <string name="app_name" translatable="false">Telecomm</string>
    <string name="login_app_name">Telecomm</string>
    <string name="pc_login_hint">PC Telecomm已登录</string>
    <string name="lucky_money_hint">Telecomm，恭喜发财</string>
    <string name="opneplanet_start_openplanet">开始使用Telecomm！</string>
    <string name="openplanet_welcome_use">欢迎使用Telecomm</string>
    <string name="guide_btn_into_app">进入Telecomm</string>
    <string name="scan_code_to_download">扫码下载Telecomm</string>
    <string name="black_diamond_intro">加入Telecomm矿池</string>
    <string name="openplanet_user">Telecomm用户</string>
    <string name="open_planet_ipcom_user">Telecomm用户</string>
    <string name="open_planet_inviate_bottom_text">扫码注册\"Telecomm\"帐号</string>
    <string name="open_planet_inviate_poster_tip1">1.扫码注册\"Telecomm\"</string>
    <string name="open_planet_packet_poster_tip2">2.下载\"Telecomm\"APP</string>
    <string name="NeiKongUploadImageActivity_PCIsOutline">PC端Telecomm不在线，无法上传影像，请在PC端登录您的Telecomm账户</string>
    <string name="NeiKongUploadImageActivity_PCIsOutline1">检测到PC端Telecomm不在线，每张影像上传只能获得50积分，登录PC端Telecomm后每张影像上传可获得100积分,是否继续？</string>
    <string name="NeiKongUploadImageActivity_PCRequestFaild">获取PC端Telecomm在线状态失败</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="login_usernameEdit">用户账号</string>
    <string name="login_passwordEdit">密码</string>
    <string name="login_Button">登录</string>
    <string name="login_Sign">注册</string>
    <string name="login_remberPassword">记住密码</string>
    <string name="login_autoLogin">自动登录</string>
    <string name="login_findBackPassword">找回密码</string>
    <string name="login_input_password_login">输入密码登录</string>
    <string name="login_sms_code_login">短信验证码登录</string>
    <string name="login_reset_password">重置密码</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="email_time">时&#160;&#160;&#160;&#160;间:</string>
    <string name="password_intro">密码用于登录、保护私钥和交易授权，强度非常重要。
        系统不存储密码，也无法帮您找回，请务必牢记！</string>
    <string name="wallet_intro">基地账户是您在区块链上的唯一地址，它根据您的私钥生成，
        请在创建完基地账户后，做好私钥和基地账户的备份</string>
    <string name="restore_hint">请填写您的基地账户“助记词”，没有他们您的基地账户将没法恢复。
        务必妥善保管好您的助记词！</string>
    <string name="from_group_backto_first">com.pansoft.openplanet.activity.TabBottomActivityForTalkChain</string>
    <string name="chat_actiivity_class">com.efounder.chat.activity.JFChatActivity</string>
    <string name="loadingdataview">com.pansoft.openplanet.widget.TCLoadingDataView</string>
    <string name="PUBLIC_CHAT_FRAGMENT_PACKAGE_NAME">com.efounder.chat.publicnumber.JFPublicChatFragment</string>
    <string name="userinfo_actiivity_class">com.efounder.chat.activity.JFUserInfoActivity</string>
    <string name="mercury_name">mercury</string>
    <string name="venus_name">venus</string>
    <string name="earth_name">earth</string>
    <string name="mars_name">mars</string>
    <string name="jupiter_name">jupiter</string>
    <string name="saturn_name">saturn</string>
    <string name="uranus_name">uranus</string>
    <string name="neptune_name">neptune</string>
    <string name="pluto_name">pluto</string>
    <string name="choose_planet">请选择您要入住的星球</string>
    <string name="planet_cannot_change_after_choose">(选择以后将不可更改)</string>
    <string name="settle_the_planet">入住星球</string>
    <string name="mercury_name_cn">水星</string>
    <string name="venus_namec_cn">金星</string>
    <string name="earth_name_cn">地球</string>
    <string name="mars_name_cn">火星</string>
    <string name="jupiter_name_cn">木星</string>
    <string name="saturn_name_cn">土星</string>
    <string name="uranus_name_cn">天王星</string>
    <string name="neptune_name_cn">海王星</string>
    <string name="pluto_name_cn">冥王星</string>
    <string name="mercury_intro">英文名：Mercury\n最接近太阳，是太阳系中最小的行星。水星在直径上小于木卫三和土
        卫六，但它的质量更大。\n公转轨道：距太阳57,910,000 千米 (0.387天文单位)\n水星直径：4,880 千米\n质量：3.30e23 千克\n
    英文名：Mercury\n最接近太阳，是太阳系中最小的行星。水星在直径上小于木卫三和土
        卫六，但它的质量更大。\n公转轨道：距太阳57,910,000 千米 (0.387天文单位)\n水星直径：4,880 千米\n质量：3.30e23 千克</string>
    <string name="venus_intro">英文名：Venus\n是离太阳第二近的行星，太阳系中第六大行星。在所有行星中，金星的轨道
        最接近圆，偏差不到1%。\n轨道半径：距太阳 108,200,000 千米 (0.723 天文单位）\n行星直径：12,103.6 千米\n质量：4.869e24 千克</string>
    <string name="earth_intro">英文名：Earth\n我们的家园，是太阳系从内向外第三颗行星，也是太阳系第五大行星。\n
        轨道半径：149,600,000 千米 （离太阳1.00 天文单位\n行星直径：12,742千米\n质量：5.9736e24 千克</string>
    <string name="mars_intro">英文名：Mars\n为距太阳第四远，也是太阳系中第七大行星，在中国古代又称荧火，因为火星呈
        红色，荧荧像火，亮度常有变化；而且在天空中运动，有时从西向东，有时又从东向西，情况复杂，令人迷惑，所以中国古代叫
        它“荧惑”，有“荧荧火光，离离乱惑。”之意。\n公转轨道：离太阳227,940,000 千米 (1.52 天文单位\n行星直径：6,794
        千米\n质量：6.4219e23 千克。</string>
    <string name="jupiter_intro">英文名：Jupiter\n是离太阳第五颗行星，而且是最大的一颗，比所有其他的行星的和质量
        大2.5倍（地球的318倍）。\n公转轨道：距太阳 778,330,000 千米 (5.20 天文单位）\n行星直径：142,984 千米 (赤道)\n
        质量：1.900e27 千克</string>
    <string name="saturn_intro">英文名：Saturn\n是离太阳第六远的行星，也是八大行星中第二大的行星。\n公转轨道：距
        太阳 1,429,400,000 千米 (9.54 天文单位）\n行星直径：120,536 千米 （赤道）\n质量：5.68e26 千克</string>
    <string name="uranus_intro">英文名：Uranus\n是太阳系中离太阳第七远行星，从直径来看，是太阳系中第三大行星。天
        王星的体积比海王星大，质量却比其小。\n公转轨道：距太阳2,870,990,000 千米 (19.218 天文单位）\n行星直径：51
        ,118 千米（赤道）\n质量：8.683e25 千克</string>
    <string name="neptune_intro">英文名：Neptune\n是环绕太阳运行的第八颗行星，也是太阳系中第四大天体（直径上）。
        海王星在直径上小于天王星，但质量比它大。\n公转轨道：距太阳 4,504,000,000 千米 (30.10 天文单位）\n行星直径
        ：49,532 千米（赤道）\n质量：1.0247e26 千克</string>
    <string name="pluto_intro">英文名：Pluto\nPluto为古罗马神话中冥王普鲁托（即希腊神话中哈迪斯Hades）\n历史上曾
        经认为，冥王星是离太阳最远而且是最小的行星，在希腊神话中象征冥王哈迪斯，是宙斯的哥哥，被弟弟夺去王位后，堕落到
        冥界。冥王星有三颗卫星。\n太阳系中有七颗卫星比冥王星大（月球，木卫一，木卫二，木卫三，木卫四，土卫六 和 海卫一）。\n
        公转轨道：离太阳平均距离5,913,520,000 千米 (39.5天文单位)\n直径：2370 千米\n质量：1.27e22 千克</string>
    <string name="chat_number">帐号</string>
    <string name="im_chat_number">星际ID</string>
    <string name="showNumberText">星际ID</string>
    <string name="chat_room_name">星际部落</string>
    <string name="group_notification">星际通知</string>
    <string name="chatgroupsettingactivity_qh">部落ID:</string>
    <string name="chatgroupsettingactivity_qname">部落名称</string>
    <string name="chat_group_info">部落信息</string>
    <string name="chatroom_exit_cannot_exit">部落创建者不能退出部落</string>
    <string name="chatroom_num">个星际部落</string>
    <string name="chatgroupsettingactivity_string1">我在本部落的昵称</string>
    <string name="chatgroupsettingactivity_englishname">部落英文名称</string>
    <string name="chatgroupsettingactivity_recommend">部落介绍</string>
    <string name="chatgroupsettingactivity_string2">部落成员</string>
    <string name="chatgroupsettingactivity_string3">部落工作地址</string>
    <string name="chatgroupsettingactivity_string4">创建时间</string>
    <string name="chatgroupsettingactivity_string6">本部落创建于yyyy年MM月dd日</string>
    <string name="chatgroupsettingactivity_string7">设置你在部落里的昵称，这个昵称只会在这个部落内显示</string>
    <string name="chatgroupsettingactivity_string8">请输入新的部落名称</string>
    <string name="chatgroupsettingactivity_string9">修改部落头像</string>
    <string name="chatgroupsettingactivity_string10">获取部落成员失败</string>
    <string name="chatgroupsettingactivity_string11"> 您确定要解散该部落？</string>
    <string name="chatgroupsettingactivity_string12">分享该部落</string>
    <string name="wechatview_serach_hint_group">搜索部落ID/部落名称</string>
    <string name="wechatview_serach_group_menu1">查找部落</string>
    <string name="wechatview_serach_group_menu2">查找更多的部落</string>
    <string name="leak_canary_display_activity_label">TelcecommLeaks</string>
    <string name="zone_message_hint">引力场动态:</string>
    <string name="wechatview_input_group_recommend">请输入部落介绍</string>
    <string name="wechatview_no_group_recommend">暂无部落介绍</string>
    <string name="wechatview_grouprecommend_title">部落介绍</string>
    <string name="wechatview_input_group_english_name">请输入部落英文名称</string>
    <string name="wechatview_add_group_error1">部落不存在或者链接已失效</string>
    <string name="im_apply_add_group_text">您确定要申请加入该部落吗？</string>
    <string name="im_add_group_text">您确定要加入该部落吗？</string>
    <string name="im_appy_add_group_fail">申请加入部落失败</string>
    <string name="im_add_group_fail">加入部落失败</string>
    <string name="im_appy_add_group_success">发送申请成功，请等待群主或者管理员审核</string>
    <string name="im_add_group_success">加入部落成功</string>
    <string name="im_add_group_request">加部落申请</string>
    <string name="im_money_prepare_tip_3">本部落共%1$s人</string>
    <string name="im_create_group">创建部落</string>
    <string name="im_select_group_user">选择联系人</string>
    <string name="wechatview_select_group_user">选择部落成员</string>
    <string name="ushare_copy_url">复制链接</string>
    <string name="ushare_system">系统分享</string>
    <string name="opneplanet_have_no_message">您还没有任何消息！</string>
    <string name="opneplanet_every_has_possiable">任何事情都有可能发生！</string>
    <string name="opneplanet_access">进入</string>
    <string name="openplanet_input_sms_code">输入短信验证码</string>
    <string name="openplanet_input_email_code">输入邮箱验证码</string>
    <string name="openplanet_input_sms_code1">请输入短信验证码</string>
    <string name="openplanet_get_sms_code">获取验证码</string>
    <string name="openplanet_input_sms_code_tip">通过点击“获取验证码”按钮，向+86 %1$s 发送短信验证码</string>
    <string name="openplanet_input_authentication_fail">验证失败</string>
    <string name="openplanet_again_send">重新发送</string>
    <string name="openplanet_sendsms_fail">发送验证码失败，请稍后重试</string>
    <string name="openplanet_has_send_sms_code">已向+86 %1$s 发送短信验证码</string>
    <string name="openplanet_please_input_correct_number">请输入正确的手机号码</string>
    <string name="openplanet_please_input_correct_email">请输入正确的邮箱地址</string>
    <string name="openplanet_please_input_correct_account">请输入正确的账号</string>
    <string name="openplanet_welcome_use1">为了方便给您提供更优质的服务，请输入您的账号</string>
    <string name="openplanet_welcome_use_email">为了方便给您提供更优质的服务，请输入您的邮箱</string>
    <string name="openplanet_is_sync_wallet">正在同步钱包..</string>
    <string name="wechatview_invite_to_group">%1$s邀请%2$s加入了部落</string>
    <string name="wechatview_free_to_group">%1$s加入了部落</string>
    <string name="wechatview_agree_to_group">%1$s同意了%2$s加入部落的申请</string>
    <string name="guide_tv_quanlian">全链</string>
    <string name="guide_tv_all_platform">全平台</string>
    <string name="wechatview_group_card">部落名片</string>
    <string name="wechatview_app_icon_url">https://panserver.solarsource.cn/panserver/files/6926fd70-3e66-42ba-bd99-05fa3ca5b58d/download</string>
    <string name="guide_tv_mining">挖矿</string>
    <string name="guide_tv_encrypted_communication">加密通讯</string>
    <string name="guide_tv_digital_asset">数字资产</string>
    <string name="guide_dialog__check_baseid_error_hint">检测到您本地基地ID与服务器不符，请重新登录创建或恢复基地账户</string>
    <string name="guide_tv_function_introduction">功能介绍</string>
    <string name="wechatview_default_group_avatar_url">https://panserver.solarsource.cn/panserver/files/0bb98df6-cddd-444e-a36c-c50beac4dcd1/download</string>
    <string name="openplanet_share_helper_contacts">联系人</string>
    <string name="openplanet_share_helper_sina">微博</string>
    <string name="openplanet_share_helper_wechat">微信</string>
    <string name="openplanet_share_helper_wxcircle">微信朋友圈</string>
    <string name="openplanet_share_helper_wechatfavorite">微信收藏</string>
    <string name="openplanet_share_helper_qq">QQ</string>
    <string name="openplanet_share_helper_qzone">QQ空间</string>
    <string name="openplanet_share_helper_copy_url">复制链接</string>
    <string name="openplanet_share_helper_share_system">系统分享</string>
    <string name="openplanet_share_helper_open_browber">浏览器打开</string>
    <string name="wechatview_group_notification_1">..部落</string>
    <string name="wechatview_group_notification_group">部落</string>
    <string-array name="red_dot_app_list">
        
        
        
    </string-array>
    <string name="wechatview_secret_please_input_pwd">请输入基地密码</string>
    <string name="wechatview_secret_dialog_tips">基地密码用于解密消息的密码</string>
    <string name="web_user_agent_plat_form">ipcom</string>
</resources>