<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_userandpass"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/op_login_primary_bg_color"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/login_password_bg" />

    <ImageView
        android:src="@drawable/login_white_back"
        android:id="@+id/iv_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="25dp"
        android:layout_height="25dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/transparent">

        <View
            android:id="@+id/view1"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_coner_float_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.efounder.widget.RoundAngleImageView
            android:id="@+id/iv_icon"
            app:roundHeight="10dp"
            app:roundWidth="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"
            android:src="@drawable/login_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/tv_welcome"
            android:text="@string/login_input_password_login"
            android:textStyle="bold"
            android:textSize="17dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view1"
            android:textColor="@color/black_text_color"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_phone_intro"
            android:text="@string/login_sms_code_login"
            android:visibility="invisible"
            android:textSize="15dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_forget_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:textColor="@color/op_login_blue_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:text="@string/login_reset_password"
            android:textSize="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:textColor="@color/op_login_blue_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.01"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_phone_zone"
            android:layout_width="wrap_content"
            android:text="+86"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/op_login_edit_hint_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view_divider"
            app:layout_constraintLeft_toRightOf="@+id/tv_phone_zone"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0.5dp"
            android:background="@color/op_login_divider_line_color"
            android:layout_height="24dp"/>
        <TextView
            android:paddingLeft="@dimen/dimen_8dp"
            android:id="@+id/tv_number"
            app:layout_constraintLeft_toRightOf="@+id/view_divider"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:textColor="@color/op_login_edit_hint_color"
            android:text=""
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <View
            app:layout_constraintTop_toBottomOf="@+id/tv_number"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/op_login_divider_line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <EditText
            android:paddingLeft="@dimen/dimen_8dp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_number"
            android:textColorHint="@color/op_login_edit_hint_color"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:background="@null"
            android:textColor="@color/wechat_white_or_black"
            android:hint="@string/login_please_input_password"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <View
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/op_login_divider_line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <Button
            android:id="@+id/tv_login"
            android:text="@string/login_Button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_intro"
            android:layout_marginTop="40dp"
            android:textSize="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/login_button_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>