<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_userandpass"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/op_login_primary_bg_color"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/login_sms_bg" />
    <ImageView
        android:src="@drawable/login_white_back"
        android:id="@+id/iv_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="25dp"
        android:layout_height="25dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/transparent">

        <View
            android:id="@+id/view1"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_coner_float_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.efounder.widget.RoundAngleImageView
            android:id="@+id/iv_icon"
            app:roundHeight="10dp"
            app:roundWidth="10dp"
            android:visibility="gone"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/login_sms"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/tv_welcome"
            android:text="@string/openplanet_input_sms_code"
            android:textStyle="bold"
            android:textSize="17dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view1"
            android:textColor="@color/black_text_color"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_phone_intro"
            android:text="@string/openplanet_input_sms_code_tip"
            android:textSize="14dp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            android:textColor="@color/op_login_orange_color"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:text="@string/openplanet_get_sms_code"
            android:textSize="14dp"
            android:textColor="@color/op_login_orange_color"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_intro"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view_divider"
            app:layout_constraintRight_toLeftOf="@+id/tv_get_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_intro"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0.5dp"
            android:background="@color/op_login_divider_line_color"
            android:layout_height="24dp"/>
        <EditText
            android:paddingLeft="@dimen/dimen_8dp"
            android:id="@+id/et_number"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintRight_toLeftOf="@+id/view_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_intro"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/wechat_white_or_black"
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:textColorHint="@color/op_login_edit_hint_color"
            android:layout_width="0dp"
            android:background="@null"
            android:hint="@string/openplanet_input_sms_code"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

        <View
            app:layout_constraintTop_toBottomOf="@+id/et_number"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/op_login_divider_line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />
        <Button
            android:id="@+id/tv_next"
            android:text="@string/common_text_next_step"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_number"
            android:layout_marginTop="40dp"
            android:textSize="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/op_login_text_white_color"
            android:gravity="center"
            android:background="@drawable/login_button_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>